--- a/ts-vue/package.json
+++ b/ts-vue/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "include-media": "^1.4.9",
+    "node-sass": "^4.11.0",
+    "open-color": "^1.6.3",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
@@ -19,8 +23,6 @@
     "@vue/cli-plugin-babel": "^3.8.0",
     "@vue/cli-plugin-typescript": "^3.8.0",
     "@vue/cli-service": "^3.8.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
   }
